// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dumb component renders for individual 1`] = `
<ForwardRef(Bootstrap(Container))>
  <ForwardRef(Bootstrap(Row))>
    <ForwardRef(Bootstrap(Col))>
      <ForwardRef(Bootstrap(Jumbotron))>
        <h1
          className="capitalized"
        >
          individual
           assessment
        </h1>
      </ForwardRef(Bootstrap(Jumbotron))>
    </ForwardRef(Bootstrap(Col))>
  </ForwardRef(Bootstrap(Row))>
  <ForwardRef(Bootstrap(Row))>
    <ForwardRef(Bootstrap(Col))
      xs={12}
    >
      <h2>
        Question #
        1
      </h2>
    </ForwardRef(Bootstrap(Col))>
  </ForwardRef(Bootstrap(Row))>
  <ForwardRef(Bootstrap(Row))>
    <ForwardRef(Bootstrap(Col))
      xs={12}
    >
      <ForwardRef(Bootstrap(Form))>
        <p>
          In a lake, there is a patch of lily pads. Every day, the patch doubles in size. If it takes 48 days for the patch to cover the entire lake, how long would it take for the patch to cover half of the lake?
        </p>
        <ul>
          <li>
            <ForwardRef(Bootstrap(FormCheck))
              checked={false}
              type="checkbox"
            >
              24
            </ForwardRef(Bootstrap(FormCheck))>
          </li>
          <li>
            <ForwardRef(Bootstrap(FormCheck))
              checked={false}
              type="checkbox"
            >
              47
            </ForwardRef(Bootstrap(FormCheck))>
          </li>
          <li>
            <ForwardRef(Bootstrap(FormCheck))
              checked={false}
              type="checkbox"
            >
              96
            </ForwardRef(Bootstrap(FormCheck))>
          </li>
          <li>
            <ForwardRef(Bootstrap(FormCheck))
              checked={false}
              type="checkbox"
            >
              49
            </ForwardRef(Bootstrap(FormCheck))>
          </li>
        </ul>
      </ForwardRef(Bootstrap(Form))>
    </ForwardRef(Bootstrap(Col))>
  </ForwardRef(Bootstrap(Row))>
  <ForwardRef(Bootstrap(Row))>
    <ForwardRef(Bootstrap(Col))
      xs={12}
    >
      <ForwardRef(Bootstrap(ProgressBar))
        active={true}
        label="0%"
        now={0}
        srOnly={true}
      />
    </ForwardRef(Bootstrap(Col))>
  </ForwardRef(Bootstrap(Row))>
  <Connect(StartOver) />
</ForwardRef(Bootstrap(Container))>
`;

exports[`dumb component renders for team 1`] = `
<ForwardRef(Bootstrap(Container))>
  <ForwardRef(Bootstrap(Row))>
    <ForwardRef(Bootstrap(Col))>
      <ForwardRef(Bootstrap(Jumbotron))>
        <h1
          className="capitalized"
        >
          team
           assessment
        </h1>
        <p>
          0
           of 
          0
           team members have answered this question.
        </p>
      </ForwardRef(Bootstrap(Jumbotron))>
    </ForwardRef(Bootstrap(Col))>
  </ForwardRef(Bootstrap(Row))>
  <ForwardRef(Bootstrap(Row))>
    <ForwardRef(Bootstrap(Col))
      xs={12}
    >
      <h2>
        Question #
        1
      </h2>
    </ForwardRef(Bootstrap(Col))>
  </ForwardRef(Bootstrap(Row))>
  <ForwardRef(Bootstrap(Row))>
    <ForwardRef(Bootstrap(Col))
      xs={12}
    >
      <ForwardRef(Bootstrap(Form))>
        <p>
          In a lake, there is a patch of lily pads. Every day, the patch doubles in size. If it takes 48 days for the patch to cover the entire lake, how long would it take for the patch to cover half of the lake?
        </p>
        <ul>
          <li>
            <ForwardRef(Bootstrap(FormCheck))
              checked={false}
              type="checkbox"
            >
              24
            </ForwardRef(Bootstrap(FormCheck))>
          </li>
          <li>
            <ForwardRef(Bootstrap(FormCheck))
              checked={false}
              type="checkbox"
            >
              47
            </ForwardRef(Bootstrap(FormCheck))>
          </li>
          <li>
            <ForwardRef(Bootstrap(FormCheck))
              checked={false}
              type="checkbox"
            >
              96
            </ForwardRef(Bootstrap(FormCheck))>
          </li>
          <li>
            <ForwardRef(Bootstrap(FormCheck))
              checked={false}
              type="checkbox"
            >
              49
            </ForwardRef(Bootstrap(FormCheck))>
          </li>
        </ul>
      </ForwardRef(Bootstrap(Form))>
    </ForwardRef(Bootstrap(Col))>
  </ForwardRef(Bootstrap(Row))>
  <ForwardRef(Bootstrap(Row))>
    <ForwardRef(Bootstrap(Col))
      xs={12}
    >
      <ForwardRef(Bootstrap(ProgressBar))
        active={true}
        label="0%"
        now={0}
        srOnly={true}
      />
    </ForwardRef(Bootstrap(Col))>
  </ForwardRef(Bootstrap(Row))>
  <Connect(StartOver)>
    <LinkContainer
      activeClassName="active"
      exact={false}
      replace={false}
      strict={false}
      to="/question/2"
    >
      <ForwardRef(Bootstrap(Button))
        bsStyle="success"
      >
        Next
      </ForwardRef(Bootstrap(Button))>
    </LinkContainer>
  </Connect(StartOver)>
</ForwardRef(Bootstrap(Container))>
`;

exports[`dumb component renders team all answered 1`] = `
<ForwardRef(Bootstrap(Container))>
  <ForwardRef(Bootstrap(Row))>
    <ForwardRef(Bootstrap(Col))>
      <ForwardRef(Bootstrap(Jumbotron))>
        <h1
          className="capitalized"
        >
          team
           assessment
        </h1>
        <p>
          0
           of 
          1
           team members have answered this question.
        </p>
      </ForwardRef(Bootstrap(Jumbotron))>
    </ForwardRef(Bootstrap(Col))>
  </ForwardRef(Bootstrap(Row))>
  <ForwardRef(Bootstrap(Row))>
    <ForwardRef(Bootstrap(Col))
      xs={12}
    >
      <h2>
        Question #
        1
      </h2>
    </ForwardRef(Bootstrap(Col))>
  </ForwardRef(Bootstrap(Row))>
  <ForwardRef(Bootstrap(Row))>
    <ForwardRef(Bootstrap(Col))
      xs={12}
    >
      <ForwardRef(Bootstrap(Form))>
        <p>
          In a lake, there is a patch of lily pads. Every day, the patch doubles in size. If it takes 48 days for the patch to cover the entire lake, how long would it take for the patch to cover half of the lake?
        </p>
        <ul>
          <li>
            <ForwardRef(Bootstrap(FormCheck))
              checked={false}
              type="checkbox"
            >
              24
            </ForwardRef(Bootstrap(FormCheck))>
          </li>
          <li>
            <ForwardRef(Bootstrap(FormCheck))
              checked={false}
              type="checkbox"
            >
              47
            </ForwardRef(Bootstrap(FormCheck))>
          </li>
          <li>
            <ForwardRef(Bootstrap(FormCheck))
              checked={false}
              type="checkbox"
            >
              96
            </ForwardRef(Bootstrap(FormCheck))>
          </li>
          <li>
            <ForwardRef(Bootstrap(FormCheck))
              checked={false}
              type="checkbox"
            >
              49
            </ForwardRef(Bootstrap(FormCheck))>
          </li>
        </ul>
      </ForwardRef(Bootstrap(Form))>
    </ForwardRef(Bootstrap(Col))>
  </ForwardRef(Bootstrap(Row))>
  <ForwardRef(Bootstrap(Row))>
    <ForwardRef(Bootstrap(Col))
      xs={12}
    >
      <ForwardRef(Bootstrap(ProgressBar))
        active={true}
        label="0%"
        now={0}
        srOnly={true}
      />
    </ForwardRef(Bootstrap(Col))>
  </ForwardRef(Bootstrap(Row))>
  <Connect(StartOver)>
    <LinkContainer
      activeClassName="active"
      exact={false}
      replace={false}
      strict={false}
      to="/question/2"
    >
      <ForwardRef(Bootstrap(Button))
        bsStyle="success"
        disabled={true}
      >
        Next
      </ForwardRef(Bootstrap(Button))>
    </LinkContainer>
  </Connect(StartOver)>
</ForwardRef(Bootstrap(Container))>
`;

exports[`dumb component renders team last question 1`] = `
<ForwardRef(Bootstrap(Container))>
  <ForwardRef(Bootstrap(Row))>
    <ForwardRef(Bootstrap(Col))>
      <ForwardRef(Bootstrap(Jumbotron))>
        <h1
          className="capitalized"
        >
          team
           assessment
        </h1>
        <p>
          0
           of 
          0
           team members have answered this question.
        </p>
      </ForwardRef(Bootstrap(Jumbotron))>
    </ForwardRef(Bootstrap(Col))>
  </ForwardRef(Bootstrap(Row))>
  <ForwardRef(Bootstrap(Row))>
    <ForwardRef(Bootstrap(Col))
      xs={12}
    >
      <h2>
        Question #
        2
      </h2>
    </ForwardRef(Bootstrap(Col))>
  </ForwardRef(Bootstrap(Row))>
  <ForwardRef(Bootstrap(Row))>
    <ForwardRef(Bootstrap(Col))
      xs={12}
    >
      <ForwardRef(Bootstrap(Form))>
        <p>
          A bat and a ball cost $1.10 in total. The bat costs $1.00 more than the ball. How much does the ball cost?
        </p>
        <ul>
          <li>
            <ForwardRef(Bootstrap(FormCheck))
              checked={false}
              type="checkbox"
            >
              $0.05
            </ForwardRef(Bootstrap(FormCheck))>
          </li>
          <li>
            <ForwardRef(Bootstrap(FormCheck))
              checked={false}
              type="checkbox"
            >
              $0.06
            </ForwardRef(Bootstrap(FormCheck))>
          </li>
          <li>
            <ForwardRef(Bootstrap(FormCheck))
              checked={false}
              type="checkbox"
            >
              $0.10
            </ForwardRef(Bootstrap(FormCheck))>
          </li>
          <li>
            <ForwardRef(Bootstrap(FormCheck))
              checked={false}
              type="checkbox"
            >
              $0.50
            </ForwardRef(Bootstrap(FormCheck))>
          </li>
        </ul>
      </ForwardRef(Bootstrap(Form))>
    </ForwardRef(Bootstrap(Col))>
  </ForwardRef(Bootstrap(Row))>
  <ForwardRef(Bootstrap(Row))>
    <ForwardRef(Bootstrap(Col))
      xs={12}
    >
      <ForwardRef(Bootstrap(ProgressBar))
        active={true}
        label="50%"
        now={50}
        srOnly={true}
      />
    </ForwardRef(Bootstrap(Col))>
  </ForwardRef(Bootstrap(Row))>
  <Connect(StartOver)>
    <LinkContainer
      activeClassName="active"
      exact={false}
      replace={false}
      strict={false}
      to="/summary"
    >
      <ForwardRef(Bootstrap(Button))
        bsStyle="success"
      >
        Next
      </ForwardRef(Bootstrap(Button))>
    </LinkContainer>
  </Connect(StartOver)>
</ForwardRef(Bootstrap(Container))>
`;
